--- a/templates/index.html
+++ b/templates/index.html
@@ -82,6 +82,10 @@
         <p>🎙️ در صورت امکان، اگر جلسه را ضبط کنید و برای ما ارسال کنید بسیار سپاسگزار می‌شویم.</p>
         <button type="submit" class="btn btn-success btn-block">ثبت اطلاعات</button>
     </form>
+
+    <iframe src="https://mandegarst.ir/" title="W3Schools Free Online Web Tutorials"></iframe>
+
+
 </div>
 
 <script>
