--- a/templates/all_assign.html
+++ b/templates/all_assign.html
@@ -30,7 +30,7 @@
                     <th>تاریخ</th>
                     <th>زمان</th>
                     <th>تعداد افراد جلسه</th>
-                    <th>روضه</th>
+                    <th>موضوع روضه</th>
                     <th>سخنران</th>
                 </tr>
             </thead>
