--- a/templates/assign.html
+++ b/templates/assign.html
@@ -18,7 +18,7 @@
                 <a href="{% url 'account:login' %}" class="btn btn-primary btn-block mt-2">لاگین</a>
             </div>
         </div>
-        {% elif request.user.is_superusers %}
+        {% elif request.user.is_superuser %}
         <h1 class="alert alert-info m-5 text-center">اتصال هوشمند سفارشات به سخنران‌ها</h1>
         <a href="{% url 'application:do_assign' %}" class="btn btn-info float-right mb-3 mr-1">اتصال هوشمند سفارشات به سخنران‌ها</a>
         <a href="{% url 'application:sent_to_channel' %}" class="btn btn-success float-right mb-3 mr-1">ارسال به گروه ایتا</a>
@@ -49,6 +49,10 @@
                     <td>{{ object.order.topic }}</td>
                     <td>{{ object.speaker.get_fullname }}</td>
                     <td><a href="{% url 'application:edit_assign' object.id %}" class="btn btn-warning">ویرایش سخنران</a></td>
+                </tr>
+                {% empty %}
+                <tr>
+                    <td colspan="8"><p class="text-warning text-center">امروز قادر به انجام این عملیات نیستید لطفا فردا دوباره امتحان نمایید یا از سخنران های بیشتری استفاده نمایید</p></td>
                 </tr>
                 {% endfor %}
             </tbody>
