اصلاح استایل ها

--- a/account/templates/register.html
+++ b/account/templates/register.html
@@ -85,11 +85,23 @@ label{
     font-size: 16px;
     font-weight: 500;
 }
-input, textarea{
+input{
     display: block;
     height: 50px;
     width: 100%;
     background-color: rgba(255,255,255,0.07);
+    border-radius: 3px;
+    direction: rtl;
+    padding: 0 10px;
+    margin-top: 8px;
+    font-size: 14px;
+    font-weight: 300;
+}
+textarea{
+    display: block;
+    height: 80px;
+    width: 100%;
+    background-color: rgba(255, 255, 255, 0.07);
     border-radius: 3px;
     direction: rtl;
     padding: 0 10px;
