نمایش بعضی موارد به صفحه اساین

--- a/templates/assign.html
+++ b/templates/assign.html
@@ -22,7 +22,8 @@
         <h1 class="alert alert-info m-5 text-center">اتصال هوشمند سفارشات به سخنران‌ها</h1>
         <a href="{% url 'application:do_assign' %}" class="btn btn-info float-right mb-3 mr-1">اتصال هوشمند سفارشات به سخنران‌ها</a>
         <a href="{% url 'application:sent_to_channel' %}" class="btn btn-success float-right mb-3 mr-1">ارسال به گروه ایتا</a>
-        <a href="{% url 'application:list_assign' %}" target="_blank" class="btn btn-outline-dark float-right mb-3 mr-1">لیست سخنرانی‌های ارسال شده در گروه</a>
+        <a href="{% url 'application:list_assign' %}" target="_blank" class="btn btn-outline-dark float-right mb-3 mr-1">لیست سخنرانی‌های ارسال شده ایتا</a>
+        <a href="{% url 'admin:index' %}" target="_blank" class="btn btn-primary float-right mb-3 mr-1">پنل ادمین</a>
         <a style="font-size: xx-large;" id="start_time" class="lead ml-2 text-success"></a>
         
         <table dir="rtl" class="table table-active table-bordered table-dark table-striped text-center">
