--- a/templates/index.html
+++ b/templates/index.html
@@ -36,6 +36,7 @@
         <div class="form-group">
             <label for="gender_attendees">👥 جنسیت حاضرین:</label>
             <select class="form-control" id="gender_attendees" name="gender_attendees">
+                <option value="بی سواد">انتخاب کنید</option>
                 <option value="مرد">مرد</option>
                 <option value="زن">زن</option>
                 <option value="مرد و زن">مرد و زن</option>
@@ -46,6 +47,7 @@
         <div class="form-group">
             <label for="education_min_attendees">📚 حداقل تحصیلات حاضرین:</label>
             <select class="form-control" id="education_min_attendees" name="education_min_attendees">
+                <option value="بی سواد">انتخاب کنید</option>
                 <option value="بی سواد">بی سواد</option>
                 <option value="تحصیلات ابتدایی">تحصیلات ابتدایی</option>
                 <option value="تحصیلات راهنمایی">تحصیلات راهنمایی</option>
@@ -60,6 +62,7 @@
         <div class="form-group">
             <label for="education_max_attendees">📚 حداکثر تحصیلات حاضرین:</label>
             <select class="form-control" id="education_max_attendees" name="education_max_attendees">
+                <option value="بی سواد">انتخاب کنید</option>
                 <option value="بی سواد">بی سواد</option>
                 <option value="تحصیلات ابتدایی">تحصیلات ابتدایی</option>
                 <option value="تحصیلات راهنمایی">تحصیلات راهنمایی</option>
