تغییر صفحه ادمین به صفحه ادمین شخصی

--- a/templates/index.html
+++ b/templates/index.html
@@ -22,16 +22,16 @@
             <input type="text" class="form-control" id="phone" name="phone" required>
         </div>
         <div class="form-group">
-            <label for="date">📅 تاریخ دقیق:</label>
+            <label for="date">📅 تاریخ دقیق روضه:</label>
             <input type="text" class="form-control" id="date" name="date" required>
         </div>
         <div class="form-group">
-            <label for="time">⏰ ساعت دقیق:</label>
+            <label for="time">⏰ ساعت دقیق روضه:</label>
             <input type="text" class="form-control" id="time" name="time" required>
         </div>
         <div class="form-group">
             <label for="num_attendees">👥 تعداد حاضرین:</label>
-            <input type="number" class="form-control" id="num_attendees" name="num_attendees">
+            <input type="number" class="form-control" id="num_attendees" name="num_attendees" value="0">
         </div>
         <div class="form-group">
             <label for="gender_attendees">👥 جنسیت حاضرین:</label>
