--- a/templates/all_assign.html
+++ b/templates/all_assign.html
@@ -21,16 +21,19 @@
             </div>
         {% elif request.user.is_superuser %}
         <h1 class="alert alert-info m-5 text-center">لیست سخنرانی های ارسال شده در گروه</h1>
-        
+        <a href="{% url 'admin:index' %}" target="_blank" class="btn btn-success float-right mb-3 mr-1">پنل ادمین</a>
+        {% if request.user.is_authenticated %}
+            <a href="{% url 'account:logout' %}" target="_blank" class="btn btn-danger float-right mb-3 mr-1">خروج از پنل ادمین</a>
+        {% endif %}
         <table dir="rtl" class="table table-active table-bordered table-dark table-striped text-center">
             <thead>
                 <tr>
                     <th>شماره همراه</th>
-                    <th>روز</th>
-                    <th>تاریخ</th>
-                    <th>زمان</th>
-                    <th>تعداد افراد جلسه</th>
-                    <th>موضوع روضه</th>
+                    <th>عنوان روز</th>
+                    <th>تاریخ روضه</th>
+                    <th>ساعت روضه</th>
+                    <th>تعداد افراد</th>
+                    <th>موضوع</th>
                     <th>سخنران</th>
                 </tr>
             </thead>
