--- a/templates/assign.html
+++ b/templates/assign.html
@@ -19,22 +19,25 @@
             </div>
         </div>
         {% elif request.user.is_superuser %}
-        <h1 class="alert alert-info m-5 text-center">اتصال هوشمند سفارشات به سخنران‌ها</h1>
-        <a href="{% url 'application:do_assign' %}" class="btn btn-info float-right mb-3 mr-1">اتصال هوشمند سفارشات به سخنران‌ها</a>
-        <a href="{% url 'application:sent_to_channel' %}" class="btn btn-success float-right mb-3 mr-1">ارسال به گروه ایتا</a>
-        <a href="{% url 'application:list_assign' %}" target="_blank" class="btn btn-outline-dark float-right mb-3 mr-1">لیست سخنرانی‌های ارسال شده ایتا</a>
-        <a href="{% url 'admin:index' %}" target="_blank" class="btn btn-primary float-right mb-3 mr-1">پنل ادمین</a>
+        <h1 class="alert alert-info m-5 text-center">اتصال هوشمند سخنران به روضه</h1>
+        <a href="{% url 'application:do_assign' %}" class="btn btn-info float-right mb-3 mr-1">اتصال هوشمند سخنران به روضه</a>
+        <a href="{% url 'application:sent_to_channel' %}" class="btn btn-success float-right mb-3 mr-1">ارسال به ایتا</a>
+        <a href="{% url 'application:list_assign' %}" target="_blank" class="btn btn-outline-dark float-right mb-3 mr-1">سخنرانی‌های ارسال شده ایتا</a>
+        <a href="{% url 'admin:index' %}" target="_blank" class="btn btn-success float-right mb-3 mr-1">پنل ادمین</a>
+        {% if request.user.is_authenticated %}
+            <a href="{% url 'account:logout' %}" target="_blank" class="btn btn-danger float-right mb-3 mr-1">خروج از پنل ادمین</a>
+        {% endif %}
         <a style="font-size: xx-large;" id="start_time" class="lead ml-2 text-success"></a>
         
         <table dir="rtl" class="table table-active table-bordered table-dark table-striped text-center">
             <thead>
                 <tr>
                     <th>شماره همراه</th>
-                    <th>روز</th>
-                    <th>تاریخ</th>
-                    <th>زمان</th>
-                    <th>تعداد افراد جلسه</th>
-                    <th>روضه</th>
+                    <th>عنوان روز</th>
+                    <th>تاریخ روضه</th>
+                    <th>ساعت روضه</th>
+                    <th>تعداد افراد</th>
+                    <th>موضوع</th>
                     <th>سخنران</th>
                     <th>امکانات</th>
                 </tr>
